# json-parser

./: README.md  main.py  pyproject.toml
json_parser/: command_line.py  core.py  json_parser.py  lexer.py  models.py  parser.py
tests/: test_lexer.py  test_parser.py  test_step1.py  test_step2.py
