[tool.poetry]
name = "json-parser"
version = "0.1.0"
description = ""
authors = ["Bernardo Pires Mesko <bernardo.mesko@ip5tecnologia.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
